--- a/arch/arm64/configs/kylo_defconfig
+++ b/arch/arm64/configs/kylo_defconfig
@@ -814,6 +814,7 @@ CONFIG_NET_SCH_FQ_CODEL=y
 CONFIG_NET_SCH_FQ=y
 CONFIG_NET_SCH_HHF=y
 CONFIG_NET_SCH_PIE=y
+CONFIG_NET_SCH_CAKE=y
 
 #
 # Classification
