--- a/arch/arm64/configs/kylo_defconfig
+++ b/arch/arm64/configs/kylo_defconfig
@@ -47,6 +47,7 @@ CONFIG_SYSVIPC_SYSCTL=y
 CONFIG_AUDIT=y
 # CONFIG_AUDIT_LOGINUID_IMMUTABLE is not set
 CONFG_WQ_POWER_EFFICIENT_DEFAULT=y
+CONFIG_POWERSUSPEND=y
 
 #
 # IRQ subsystem
