cpufreq: Add despair gov

--- a/drivers/cpufreq/Kconfig
+++ b/drivers/cpufreq/Kconfig
@@ -140,6 +140,11 @@ config CPU_FREQ_DEFAULT_GOV_BLUACTIVE
 	help
 	Use the CPUFreq governor 'bluactive' as default.
 
+config CPU_FREQ_DEFAULT_GOV_DESPAIR
+	bool "despair"
+	select CPU_FREQ_GOV_DESPAIR
+	help
+
 config CPU_FREQ_DEFAULT_GOV_BARRY_ALLEN
 	bool "barry_allen"
 	select CPU_FREQ_GOV_BARRY_ALLEN
@@ -258,6 +263,10 @@ config CPU_FREQ_GOV_BLUACTIVE
 	depends on CPU_FREQ
 	help
 	  'bluactive' - less aggressive version of interactive
+
+config CPU_FREQ_GOV_DESPAIR
+	tristate "'despair' cpufreq governor"
+	depends on CPU_FREQ
 
 config CPU_FREQ_GOV_BARRY_ALLEN
 	tristate "'barry_allen' cpufreq policy governor"
