cpufreq: qcom-cpufreq: Check return of cpufreq_frequency_get_table
cpufreq_frequency_get_table could return NULL. Do error check on the
return value instead of continue with a potentially NULL pointer.

Change-Id: I0cb8a3a8ae3499e738683e5f45271aeadee488f6
Signed-off-by: Junjie Wu <junjiew@codeaurora.org>
Signed-off-by: franciscofranco <franciscofranco.1990@gmail.com>
ALSA: compress: Add support to send codec specific data

Codec specific  metadata is sent only for first stream in gapless
playback. This causes incorrect configuration to be set for second
stream and distortions are observed due to framedrops in adsp.
Add support to send codec specific format during start of
next stream in gapless using set_next_track_param.

Change-Id: Ieec6b2afedec156e47873efcad9b3571160b0a29
Signed-off-by: Chaithanya Krishna Bacharaju <chaithan@codeaurora.org>

ASoC: msm: qdsp6v2: Handle additional codec specific metadata

Codec specific  metadata is sent only for first stream in gapless
playback. This causes incorrect configuration to be set for second
stream and distortions are observed due to framedrops in adsp.
Add support to send codec specific format during start of
next stream in gapless.
Add bit rate to wma codec data structure as it can vary between
streams in gapless.

Change-Id: I39f34ea1addff720612fe3e06257e7d75889e574
Signed-off-by: Chaithanya Krishna Bacharaju <chaithan@codeaurora.org>
Signed-off-by: Fred Oh <fred@codeaurora.org>
Signed-off-by: Alexy Joseph <alexyj@codeaurora.org>
ASoC: qdsp6v2: Squashed upstream audio offload improvements

SoC: msm: qdsp6v2: Enable gapless for pcm offload

Enable gapless for PCM offload format playback.

Signed-off-by: Chaithanya Krishna Bacharaju <chaithan@codeaurora.org>

ASoC: msm: qdsp6v2: fix incomplete playback issue for non-gapless formats

Fix data loss on auto switching of playback to next clip
when current playback format is not having gapless support
in compressed driver.
Media playback complete event is sent to framework o

--- a/arch/arm64/configs/saber_defconfig
+++ b/arch/arm64/configs/saber_defconfig
@@ -46,7 +46,6 @@ CONFIG_DEFAULT_HOSTNAME="(none)"
 CONFIG_AUDIT=y
 # CONFIG_AUDIT_LOGINUID_IMMUTABLE is not set
 CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
-CONFIG_POWERSUSPEND=y
 CONFIG_WAKE_GESTURES=y
 CONFIG_SOUND_CONTROL_HAX_3_GPL=y
 
@@ -2514,6 +2513,7 @@ CONFIG_HID_CYPRESS=y
 # CONFIG_HID_EMS_FF is not set
 CONFIG_HID_ELECOM=y
 CONFIG_HID_EZKEY=y
+CONFIG_HID_FIIO=y
 CONFIG_HID_HOLTEK=y
 CONFIG_HOLTEK_FF=y
 CONFIG_HID_KEYTOUCH=y
