--- a/arch/arm64/configs/saber_defconfig
+++ b/arch/arm64/configs/saber_defconfig
@@ -48,6 +48,7 @@ CONFIG_AUDIT=y
 CONFIG_WQ_POWER_EFFICIENT_DEFAULT=y
 CONFIG_WAKE_GESTURES=y
 CONFIG_SOUND_CONTROL_HAX_3_GPL=y
+CONFIG_ZEN_INTERACTIVE=y
 
 #
 # IRQ subsystem
