--- a/arch/arm64/configs/saber_defconfig
+++ b/arch/arm64/configs/saber_defconfig
@@ -36,7 +36,7 @@ CONFIG_BUILDTIME_EXTABLE_SORT=y
 #
 CONFIG_INIT_ENV_ARG_LIMIT=32
 CONFIG_CROSS_COMPILE=""
-CONFIG_LOCALVERSION="-benzoCore64"
+CONFIG_LOCALVERSION="-saberCore."
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_HAVE_KERNEL_GZIP=y
 CONFIG_HAVE_KERNEL_LZMA=y
@@ -156,7 +156,7 @@ CONFIG_SYSCTL=y
 CONFIG_ANON_INODES=y
 CONFIG_HAVE_UID16=y
 CONFIG_SYSCTL_EXCEPTION_TRACE=y
-CONFIG_HOTPLUG=y
+# CONFIG_ is not set
 CONFIG_PANIC_TIMEOUT=5
 CONFIG_EXPERT=y
 CONFIG_UID16=y
@@ -326,7 +326,7 @@ CONFIG_SCHED_MC=y
 # CONFIG_SCHED_SMT is not set
 # CONFIG_ARCH_WANTS_CTXSW_LOGGING is not set
 CONFIG_NR_CPUS=8
-CONFIG_HOTPLUG_CPU=y
+# CONFIG_HOTPLUG_CPU is not set
 # CONFIG_PREEMPT_NONE is not set
 # CONFIG_PREEMPT_VOLUNTARY is not set
 CONFIG_PREEMPT=y
@@ -463,9 +463,6 @@ CONFIG_CPU_FREQ_GOV_BARRY_ALLEN=y
 CONFIG_CPU_FREQ_GOV_ZZMOOVE=y
 CONFIG_CPU_BOOST=y
 # CONFIG_GENERIC_CPUFREQ_CPU0 is not set
-CONFIG_MSM_HOTPLUG=y
-CONFIG_BRICKED_HOTPLUG=y
-CONFIG_INTELLI_HOTPLUG=y
 
 #
 # ARM CPU frequency scaling drivers
